2007-12-26  Johan Dahlin  <johan@gnome.org>

	* flumotion/ui/wizard.py (_WalkableStack.skip_to): Cleanup, use
	enumerate instead of range+len+getitem.

2007-12-24  Johan Dahlin  <johan@gnome.org>

	* po/sv.po: Avoid mnemonic conflict for menubar items

2007-12-21  Johan Dahlin  <johan@gnome.org>

	* flumotion/admin/admin/main.py (__version__): 
	* flumotion/admin/command/main.py (__version__): 
	* flumotion/admin/text/main.py (__version__): 
	Remove pyflakes hacks, since it breaks pychecker

	* flumotion/twisted/Makefile.am:
	* flumotion/twisted/rtsp.py:
	* po/POTFILES.in:

	Remove flumotion.twisted.http and import twisted.web.http directly,
	since we're requiring twisted 2.0 anyway.

2007-12-21  Johan Dahlin  <johan@gnome.org>

	* flumotion/admin/*: Make pyflakes clean

	* flumotion/component/encoders/encodingprofile.py (Int.__init__): 
	Don't use **kwargs to make pychecker happy

	* flumotion/ui/icons.py (register_icons): Refactor the icon registration
	to be generic and explicit. Register stock icons for all moods, to be
	used by the admin client.

	* flumotion/ui/simplewizard.py (SimpleWizard.__init__): Forgot to 
	commit which should have been a part of the fix for rev 6014

	* flumotion/component/encoders/*: 

	Add encoding profiles and encoding wizard plugins, 
	part of bug 812.
	
2007-12-21  Johan Dahlin  <johan@gnome.org>

	* flumotion/admin/text/connection.py (connected): Remove e,
	should make pychecker happy.

	* flumotion/admin/text/view.py:
	Make sure it works again after some things got moved around

	* flumotion/admin/connections.py (RecentConnection.__init__): 
	set the name attribute which is used by the text client

	* flumotion/admin/text/greeter.py (AdminTextGreeter.connectionLost): 
	Implement a stub here, it might be called if an error happens very early on

	* flumotion/admin/text/connection.py (connected): 
	Add some tracebacks helper, to print clean tracebacks instead of curses mangled ones	

2007-12-20  Johan Dahlin  <johan@gnome.org>
